// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledButton /> should style the component on valid props 1`] = `
.c0 {
  background-color: #000000;
  border: 2px solid #ffffff;
  border-radius: 3px;
  color: #ffffff;
  cursor: pointer;
  padding: 1rem;
  -webkit-transition: all 200ms ease-in;
  transition: all 200ms ease-in;
  -webkit-transition-property: border-color,color;
  transition-property: border-color,color;
}

.c0:focus {
  outline: none;
}

<button
  className="c0"
/>
`;

exports[`<StyledButton /> should style the component on valid props 2`] = `
.c0 {
  background-color: #000000;
  border: 2px solid #ffffff;
  border-radius: 3px;
  color: #ffffff;
  cursor: pointer;
  padding: 1rem;
  -webkit-transition: all 200ms ease-in;
  transition: all 200ms ease-in;
  -webkit-transition-property: border-color,color;
  transition-property: border-color,color;
  border-color: #9e9e9e;
  color: #9e9e9e;
  cursor: wait;
}

.c0:focus {
  outline: none;
}

<button
  className="c0"
  disabled={true}
/>
`;
